--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1597,3 +1597,21 @@ section {
   color: #fff;
   text-decoration: none;
 }
+
+.button {
+  background-color: whitesmoke;
+  color: #3291e6;
+  border-radius: 10px;
+  margin-left: 160px;
+}
+
+.th {
+  margin-left: 300px;
+}
+
+.table {
+  background-color: whitesmoke;
+  border: left 2px;
+  border: right 2px;
+  padding: 2px;
+}
