--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ h6 {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #1977cc;
-  border-top-color: #d1e6f9;
+  border-top-color: #82c2fa;
   border-radius: 50%;
   width: 60px;
   height: 60px;
