--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -469,7 +469,7 @@ h6 {
 #hero {
   width: 100%;
   height: 90vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/img 07.jpg");
   background-size: cover;
   margin-bottom: 20px;
 }
